# csi_model_log

./: LICENSE  requirements.txt  setup.py
backend/: llm.py  main.py  str_main.py  test.md
data/: MODEL_v2.$et  MODEL_v2_summary.txt  Model001.e2k  Model002.e2k  Model1.$et  Model2.$et  Model2_summary.txt
data/MODEL/: MODEL_v1.EDB  MODEL_v10.EDB  MODEL_v11.$et  MODEL_v11.EDB  MODEL_v2.EDB  MODEL_v4.1_stats.json  MODEL_v4.1_summary.txt  MODEL_v4.EDB  MODEL_v6.EDB  MODEL_v6_stats.json  MODEL_v6_summary.txt  MODEL_v7.$et  MODEL_v8.$et  MODEL_v8.EDB  MODEL_v9.EDB
etabs_text_log/: __init__.py  aggregate.py  diffing.py  location.py  mcp_server.py  model.py  parser.py  summarize.py
output/: v4_v6.txt.txt
sap_log/: pyproject.toml
sap_log/reference_files/: 1_etabs_model_log_spec.ipynb  2_etabs_model_log_sketch.ipynb  Model1.$et.json  Model1.EDB
sap_log/reference_files/MODELS/: MODEL_v1.$et  MODEL_v10.$et  MODEL_v12.$et  MODEL_v12.EDB  MODEL_v13.$et  MODEL_v13.EDB  MODEL_v3.$et  MODEL_v3.EDB  MODEL_v5.$et  MODEL_v5.EDB  MODEL_v6.$et  MODEL_v7.EDB  MODEL_v9.$et
sap_log/sap_log/: log_agent.py  log_runner.py  test.md  text_parser.py
src/etabs_text_log/: CSI Compare.sln  __main__.py
src/etabs_text_log/ShearStressV1/: CSI_COMPARE.vbproj  cPlugin.vb  frmLog.Designer.vb  frmLog.vb  frmViewLog.Designer.vb  frmViewLog.vb  packages.config
src/etabs_text_log/ShearStressV1/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
versions/: MODEL_v4.1.$et  MODEL_v4.1_stats.json  MODEL_v4.1_summary.md  MODEL_v4.1_summary.txt  MODEL_v4.e2k
