[project]
name = "sap-log"
version = "0.1.0"
description = ""
authors = [
    {name = "Chase Perry",email = "cperry@hardestyhanover.com"}
]
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "google-adk (>=1.18.0,<2.0.0)",
    "litellm (>=1.79.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
